# lib/dbservice_web/controllers/batch_controller.ex
@@ -29,7 +29,25 @@ defmodule DbserviceWeb.BatchController do
           description("All the batches")
           type(:array)
           items(Schema.ref(:Batch))
-        end
+        end,
+      UserIds:
+        swagger_schema do
+          properties do
+            user_ids(:array, "List of user ids")
+          end
+          example(%{
+            user_ids: [1, 2],
+          })
+        end,
+      SessionIds:
+        swagger_schema do
+          properties do
+            session_ids(:array, "List of session ids")
+          end
+          example(%{
+            session_ids: [1, 2],
+          })
+        end,
     }
   end
 
@@ -114,10 +132,32 @@ defmodule DbserviceWeb.BatchController do
     end
   end
 
+  swagger_path :update_users do
+    post("/api/batch/{batchId}/update-users")
+
+    parameters do
+      batchId(:path, :integer, "The id of the batch", required: true)
+      body(:body, Schema.ref(:UserIds), "List of user ids to update", required: true)
+    end
+
+    response(200, "OK", Schema.ref(:Batch))
+  end
+
   def update_users(conn, %{"id" => batch_id, "user_ids" => user_ids}) when is_list(user_ids) do
     with {:ok, %Batch{} = batch} <- Batches.update_users(batch_id, user_ids) do
       render(conn, "show.json", batch: batch)
     end
+  end
+
+  swagger_path :update_sessions do
+    post("/api/batch/{batchId}/update-sessions")
+
+    parameters do
+      batchId(:path, :integer, "The id of the batch", required: true)
+      body(:body, Schema.ref(:SessionIds), "List of session ids to update", required: true)
+    end
+
+    response(200, "OK", Schema.ref(:Batch))
   end
 
   def update_sessions(conn, %{"id" => batch_id, "session_ids" => session_ids})
